# digital-twins-for-fluid-simulation

./: .dockerignore  .env_template  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.data  Dockerfile.data.dockerignore  LICENSE.md  README.md  build-all.sh  build-docker.sh  compose.yml  deploy-k8s.sh  premake5.lua  repo.toml
.github/ISSUE_TEMPLATE/: bug_report_form.yml  config.yml  documentation_request_correction.yml  documentation_request_new.yml  feature_request_form.yml
aeronim/: Dockerfile.aeronim  requirements.txt
aeronim/rtwt/: config.pbtxt
deploy/: README.md
dev/: DEVELOPER_GUIDE.md  README.md  build.sh  compose-inference.yml  run-aeronim-container.sh  run-kit.sh  run-webapp.sh
docs/: deploy-openshift.md  developer-guide.md  extending.md
kit-app/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  build.bat  build.sh  index.rst  premake5.lua  repo.toml  repo_tools.toml
kit-streamer/: README.md  index.js  package-lock.json  package.json  vite.config.js
launch-proxy/: Dockerfile  entrypoint.sh  nginx.conf
rtdt-chart/: Chart.yaml  values.yaml
scripts/: startup.sh
service_network/: Dockerfile  README.md  main.py  run_zmq_services.sh  setup.cfg
service_network/src_py/inference_service/: __init__.py  file_inference.py  service.py  service_zmq.py
stages/: Base.usda  BaseCAE.usda  BaseCAEVariants.usda  Main.usda
trame-app/: .gitignore  Dockerfile  app.py  requirements.txt  run-trame.sh  setup-trame.sh
web-app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+357 files in other folders)
