[metadata]
name = inference_service
version = 0.1.2
author = NVIDIA
author_email = nvidia@nvidia.com
description = service for digital twins for fluid simulationl blueprint
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src_py
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    zmq

[options.packages.find]
where = src_py
